k8s-configs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  namespace: m3test
spec:
  selector:
    matchLabels:
      app: demo
  replicas: 3
  template:
    metadata:
      labels:
        app: demo      
    spec:
      imagePullSecrets:
            - name: pkg-pull-secret
      containers:
        - name: demo
          image: pkgs.doc.network/m3stuff/demo:latest
          imagePullPolicy: Always
          command: ["/app/demo"]
          ports:
            - name: controller
              containerPort: 9080
          resources:
            limits:
              cpu: "1.5"
              memory: 2Gi
            requests:
              cpu: "0.5"
              memory: 1Gi
          securityContext:
            runAsUser: 6379
            runAsNonRoot: true
            readOnlyRootFilesystem: true

---
apiVersion: v1
kind: Service
metadata:
  name: demo
  namespace: m3test
spec:
  ports:
    - port: 9080
      name: demo
  selector:
    app: demo

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  namespace: m3test
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.aplpha.kubernetes.io/hostname: demo.m3demo.doc.network
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - demo.m3demo.doc.network
      secretName: m3demo-cert
  rules:
    - host: demo.m3demo.doc.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo
                port:
                  number: 9080
